critical bug fix